<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/floral_white"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/buzzersLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoresTable">


    </LinearLayout>

    <LinearLayout
        android:id="@+id/answer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="116dp"
        android:orientation="vertical"
        android:visibility="invisible"
        android:gravity="center"
        android:background="#AAAAAA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoresTable">

        <TextView
            android:id="@+id/answerText"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <Button
            android:id="@+id/buttonCorrect"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:elevation="10dp"
            android:stateListAnimator="@null"
            android:backgroundTint="@color/cg_blue"
            android:translationZ="10dp"
            android:text="@string/correct" />

        <Button
            android:id="@+id/buttonWrong"
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:elevation="10dp"
            android:stateListAnimator="@null"
            android:backgroundTint="@color/cg_blue"
            android:translationZ="10dp"
            android:text="@string/wrong" />

    </LinearLayout>

    <TableLayout
        android:id="@+id/scoresTable"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="114dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TableLayout>

    <Button
        android:id="@+id/go_to_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="switchToEnding"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:backgroundTint="@color/cg_blue"
        android:translationZ="10dp"
        android:text="@string/go_to_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoresTable" />


</androidx.constraintlayout.widget.ConstraintLayout>