<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floral_white"
    tools:context=".activity.AuthenticationActivity">

    <Button
        android:id="@+id/createAcc"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="126dp"
        android:text="@string/createAcc"
        android:backgroundTint="@color/cg_blue"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/googleBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="21dp"
        android:fontFamily="monospace"
        android:textColor="@color/black"
        android:text="TextView"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logIn" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="175dp"
        android:ems="10"
        android:hint="password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="27dp"
        android:text="@string/logIn"
        android:backgroundTint="@color/cg_blue"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleBtn" />

    <Button
        android:id="@+id/googleBtn"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:text="@string/logInGoogle"
        android:backgroundTint="@color/cg_blue"
        android:elevation="10dp"
        android:stateListAnimator="@null"
        android:translationZ="10dp"
        app:layout_constraintBottom_toTopOf="@+id/logIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAcc" />
</androidx.constraintlayout.widget.ConstraintLayout>